# Copyright (c) 2021-2022 Jakob Ketterl <jakob.ketterl@gmx.de>
#
# This file is part of csdr++.
#
# csdr++ is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# csdr++ is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with csdr++.  If not, see <https://www.gnu.org/licenses/>.

add_executable(csdr++-bin csdr++.cpp commands.cpp)
set_target_properties(csdr++-bin PROPERTIES OUTPUT_NAME csdr++)
target_link_libraries(csdr++-bin csdr++)
install(TARGETS csdr++-bin DESTINATION ${CMAKE_INSTALL_BINDIR})
